# DarwinNicUtil

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  build-requirements.txt  darwin-nic  darwin-nic-venv  darwin-nic.spec  mkdocs.yml  pyproject.toml
docs/: architecture.md  cli.md  development.md  index.md  quickstart.md
examples/: config.toml  darwin-nic.local.toml
scripts/: build.sh  emergency-restore.sh  run_tests.sh
src/darwin_mgmt_nic/: __init__.py  cli.py  config.py  configurator.py  detectors.py  factory.py  guided_setup.py  linux.py  macos.py  network_manager.py  settings.py  tui.py  unified_entry.py
tests/: conftest.py  test_config.py  test_configurator.py  test_detectors.py  test_factory.py  test_macos.py
