[project]
name = "darwin-mgmt-nic-configurator"
version = "2.0.0"
description = "Darwin USB network interface configurator for management access to network devices"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Zlib"}
authors = [
    {name = "Contributors"}
]
keywords = [
    "usb",
    "network",
    "macos",
    "linux",
    "management",
    "mikrotik",
    "networking",
    "configuration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: zlib/libpng License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    # Minimal dependencies - mostly standard library
    "typing-extensions>=4.12.0",  # For compatibility
    "rich>=13.0.0",  # Rich TUI for guided setup
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.15.0",
    "pytest-html>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[project.scripts]
darwin-nic = "darwin_mgmt_nic.unified_entry:main"

[project.urls]
Homepage = "https://gitlab.com/tinyland/projects/darwin-mgmt-nic-configurator"
Repository = "https://gitlab.com/tinyland/projects/darwin-mgmt-nic-configurator.git"
Issues = "https://gitlab.com/tinyland/projects/darwin-mgmt-nic-configurator/-/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darwin_mgmt_nic"]

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py314"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
files = ["src/darwin_mgmt_nic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
